--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,12 +4,21 @@ body {
     background-color: rgb(27, 27, 27);
     margin: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
 
 ul {
     list-style: none;
+}
+
+.gutter {
+    width: 20%;
+}
+
+.main {
+    flex-direction: column;
 }
 
 .header-page {
@@ -19,9 +28,7 @@ ul {
     align-items: flex-end;
     background-color: #1F2937;
     color: #EBCD50;
-    width: 80%;
     height: 2.8em;
-    min-width: fit-content;
 }
 
 .header-logo {
@@ -46,5 +53,13 @@ ul {
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
-   width: 80%;
+   padding: 50px;
+
+}
+
+.intro-card-one {
+        flex-direction: column;
+        justify-content: space-between;
+        color: #EBCD50;
+        margin: 25px 25px 25px 50px;
 }
