--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    min-width: fit-content;
 }
 
 ul {
@@ -62,4 +63,25 @@ ul {
         justify-content: space-between;
         color: #EBCD50;
         margin: 25px 25px 25px 50px;
+        width: 300px;
+}
+
+.intro-card-two    {
+    margin: 25px 50px 25px 25px;
+}
+
+
+.button {
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+    border: 0;
+  border-radius: 0.25rem;
+  background: #1E88E5;
+  color: white;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0;
+  cursor: pointer;
 }
